Formatting fixes for TSI. Fix hero height on homepage for letterbox screens. Fix nav heigh on mobile overlapping

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,7 +16,7 @@ $mobile-padding: 15px;
 $border-radius: 5px;
 $mobile-footer-nav-height: 60px;
 $nav-height: 120px;
-$nav-height-mobile: 60px;
+$nav-height-mobile: 100px;
 
 // fonts
 @import './helpers/.helpers';
